@@ -515,6 +515,8 @@ Release 0.20.0 - Unreleased
     HADOOP-4854. Read reclaim capacity interval from capacity scheduler 
     configuration. (Sreekanth Ramakrishnan via yhemanth)
 
+    HADOOP-4896. HDFS Fsck does not load HDFS configuration. (Raghu Angadi)
+
 Release 0.19.1 - Unreleased
 
   IMPROVEMENTS
